@@ -3063,8 +3063,6 @@ $wgReservedUsernames = array(
 $wgDefaultUserOptions = array(
 	'ccmeonemails'            => 0,
 	'cols'                    => 80,
-	'contextchars'            => 50,
-	'contextlines'            => 5,
 	'date'                    => 'default',
 	'diffonly'                => 0,
 	'disablemail'             => 0,
